2011-06-07  Ian Beckwith  <ianb@erislabs.net>

	* Default to surfraw_graphical_remote=no,
	  as chromium doesn't support "-remote openURL".

2011-05-31  Jason Ryan  <jasonwryan@gmail.com>

	* Add options to archpkg.

2011-05-12  Sara Fauzia  <sara@archlinux.us>

	* Fix archpkg URL.

2011-05-12  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN:
	  + if elvi doesn't exist, send usage to stderr not stdout.
	  + bookmark names: do exact match not substring match.
	* Added tests for archwiki, deli & stack.
	* README:
	  + added INTEGRATION section on uzbl and pentadactyl.
	  + upcased section headings for clarity.

2011-05-12  Jason Ryan  <jasonwryan@gmail.com>

	* New elvi:
	  + archwiki: search the arch wiki.
	  + deli: search delicious.com.
	  + stack: search stackoverflow.com and friends.

2011-03-21  Ian Beckwith  <ianb@erislabs.net>

	* google: Added -safe=default|off|moderate|strict
	  option for Safe Search.

2011-03-21  Ivy Foster  <joyfulgirl@archlinux.us>

	* Added Google Translate to elvi/translate.

2011-03-03  Ian Beckwith  <ianb@erislabs.net>

	* opensearch: new option -r, uses redirector at
	  http://erislabs.net/ianb/webtools/opensearch/ instead of calling
	  opensearch-discover and opensearch-genquery. -r is selected
	  automatically if those tools are not installed. This enables us
	  to ship opensearch in the main surfraw package and it still
	  functions if the dependencies are not installed. See
	  debian/changelog.
	* wikipedia: new options:
	  + -d, uses a redirector at http://erislabs.net/ianb/webtools/wpdp/
	    This redirector searches for a page with that name at wikipedia.
 	    If not found, it searches deletionpedia, if not found there
	    it falls back to a normal wikipedia search.
	  + -f=w|d, -fallback=wikipedia|deletionpedia
	    Implies -d. If page not found at either wikipedia or deletionpedia,
            whether to fallback to wikipedia search or deletionpedia search.
	* google:
	  + support video, maps and news.