@@ -1,2 +1,2 @@
 debwiki LowThresholdNMU
-Results <strong>1 - 25</strong> of
+Results <strong>1 - \d+</strong> of
